<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libcaer_driver</name>
  <version>1.0.0</version>
  <description>ROS2 driver for event base sensors using libcaer</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache-2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ros_environment</buildtool_depend> <!-- ROS_VERSION + ROS_DISTRO -->

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>event_camera_msgs</depend>
  <depend>std_srvs</depend>
  <depend>libusb-1.0-dev</depend>
  
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <!-- <test_depend>ament_cmake_pep257</test_depend> not working on galactic -->
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <!-- this is crucial else the package will not be registered! -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
